# horizon

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GitVersion.yml  LICENSE  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.surge/: surge.yml
crates/horizon-core/: Cargo.toml
crates/horizon-core/src/: agent_pair.rs  agent_status.rs  agents.rs  attention.rs  board.rs  config.rs  config_migration.rs  dir_search.rs  editor.rs  error.rs  git_changes.rs  git_status.rs  git_watcher.rs  github.rs  horizon_home.rs  layout.rs  lib.rs  managed_install.rs  opencode_paths.rs  orchestration.rs  panel.rs  remote_hosts.rs  runtime_state.rs  search.rs  session_store.rs  shortcuts.rs  speech_config.rs  speech_model.rs  squad.rs  task.rs  task_usage.rs  terminal.rs  transcript.rs  usage_dashboard.rs  usage_stats.rs  view.rs  workspace.rs  workspace_context.rs
crates/horizon-core/src/agent_pair/: tests.rs
crates/horizon-core/src/board/: arrangement.rs  attention.rs  context.rs  geometry.rs  orchestration.rs  shutdown.rs  workspace_layout.rs  workspaces.rs
crates/horizon-core/src/board/tests/: core.rs  layout.rs  mod.rs  workspace.rs  workspace_attention.rs
crates/horizon-core/src/panel/: spawn.rs
crates/horizon-core/src/runtime_state/: agent_sessions.rs  claude_live_sessions.rs
crates/horizon-core/src/session_store/: model.rs  tests.rs
crates/horizon-core/src/ssh/: config_parser.rs  connection_status.rs  mod.rs
crates/horizon-core/src/terminal/: content.rs  events.rs  lifecycle.rs  replay.rs  resize.rs  selection.rs  support.rs
crates/horizon-core/src/usage_stats/: claude.rs
crates/horizon-core/tests/: session_startup.rs  transcript_capture_incompatible_script.rs  transcript_capture_missing_script.rs  workspace_bounds.rs
crates/horizon-core/tests/support/: mod.rs  transcript_capture.rs
crates/horizon-cursor/: Cargo.toml
crates/horizon-cursor/src/: lib.rs
crates/horizon-ui/: Cargo.toml  build.rs
crates/horizon-ui/assets/fonts/: THIRD_PARTY_NOTICES.md
crates/horizon-ui/examples/: surge-update-smoke.rs
crates/horizon-ui/src/: app.rs  branding.rs  command_registry.rs  dir_picker.rs  editor_widget.rs  git_changes_widget.rs  github_work_item_overlay.rs  input.rs  loading_spinner.rs  main.rs  native_app.rs  plugin_install.rs  primary_clipboard.rs  primary_selection.rs  quick_nav.rs  remote_hosts_overlay.rs  remote_hosts_widget.rs  terminal_widget.rs  theme.rs  usage_widget.rs
crates/horizon-ui/src/app/: actions.rs  attention_feed.rs  canvas.rs  detached_viewports.rs  file_drop.rs  file_drop_highlight.rs  frame_stats.rs  lifecycle.rs  minimap.rs  mod.rs  panel_chrome.rs  panels.rs  persistence.rs  remote_hosts.rs  root_chrome.rs  session.rs  session_manager.rs  settings.rs  shortcut_inventory.rs  shortcuts.rs  sidebar.rs  ssh_upload.rs  startup_session.rs  tasks.rs  updates.rs  util.rs  view.rs  workspace.rs  yaml_highlight.rs
crates/horizon-ui/src/app/actions/: command_palette.rs  interaction.rs  layout.rs  panels.rs  pickers.rs  search.rs  support.rs
crates/horizon-ui/src/app/agent_pair/: mod.rs  render.rs  state.rs
crates/horizon-ui/src/app/attention_feed/: tests.rs
crates/horizon-ui/src/app/minimap/: interaction.rs  labels.rs  spotlight.rs
crates/horizon-ui/src/app/minimap/spotlight/: aggregation.rs  layout.rs  tests.rs
crates/horizon-ui/src/app/panels/: tests.rs
crates/horizon-ui/src/app/settings/: bar.rs  general.rs  mod.rs  presets.rs  shortcuts.rs  speech.rs  yaml_editor.rs
crates/horizon-ui/src/app/settings/speech/: model_info.rs
crates/horizon-ui/src/app/sidebar/: toolbar.rs
crates/horizon-ui/src/app/speech/: capture.rs  engine.rs  mod.rs  stub.rs  worker.rs
crates/horizon-ui/src/app/speech/engine/: tests.rs
crates/horizon-ui/src/app/ssh_upload/: destination_picker.rs  render.rs  worker.rs
crates/horizon-ui/src/app/ssh_upload/worker/: ssh.rs
crates/horizon-ui/src/app/workspace/: paint.rs  render.rs  toolbar.rs
crates/horizon-ui/src/command_palette/: mod.rs  render.rs
crates/horizon-ui/src/dir_picker/: local.rs  mod.rs  modal.rs
crates/horizon-ui/src/input/: keyboard.rs  mod.rs  mouse.rs  sequence.rs  winit_keyboard.rs
crates/horizon-ui/src/remote_hosts_overlay/: layout.rs  paint.rs  query.rs
crates/horizon-ui/src/search_overlay/: mod.rs  render.rs
crates/horizon-ui/src/terminal_widget/: ime.rs  input.rs  layout.rs  mod.rs  render.rs  scrollbar.rs
crates/horizon-ui/src/terminal_widget/input/: selection_drag.rs  selection_tests.rs
crates/orbiterm-app/: Cargo.toml
crates/orbiterm-app/src/: app.rs  branding.rs  input.rs  main.rs  terminal_widget.rs  theme.rs
crates/orbiterm-core/: Cargo.toml
crates/orbiterm-core/src/: attention.rs  board.rs  config.rs  error.rs  lib.rs  panel.rs  pty_io.rs  terminal.rs  workspace.rs
crates/tg-app/: Cargo.toml
crates/tg-app/src/: app.rs  input.rs  main.rs  terminal_widget.rs  theme.rs
crates/tg-core/: Cargo.toml
docs/: ai-roadmap-2026-03-17.md  feature-ideas.md  feature-research-2026-03-15.md  release-flow.md
docs/architecture/: maintainability.md
docs/design/: 2026-07-19-minimap-workspace-attention-concepts.html
docs/testing/: 2026-03-19-align-workspaces-shortcut-smoke.md  2026-03-19-command-palette-detached-workspaces-smoke.md  2026-03-19-detached-workspace-smoke.md  2026-03-19-ssh-panels-smoketest-plan.md  2026-03-19-terminal-focus-shortcut-gate-smoke.md  2026-03-20-detached-workspace-interactions-smoke.md  (+50 more)
examples/: multi-agent.yaml
scripts/: build-surge-toolchain.sh  check-maintainability.sh  check-version-sync.sh  next-version.sh  package-release-asset.sh  profile-vulkan.sh  profile.sh  render-homebrew-formula.sh  render-surge-manifest.sh  render-winget-manifests.ps1  render-winget-manifests.sh  repro-issue-19-redraw.sh  run-surge-azure-smoke.sh  run-surge-filesystem-smoke.sh  run-winget-azure-smoke.sh  set-release-version.sh  smoke-winget-package.ps1  stage-surge-artifacts.sh  update-homebrew-tap.sh  update-winget-pkgs.sh  version-lib.sh
snap/: snapcraft.yaml
snap/local/: launch.sh
(+13 files in other folders)
