[workspace]
resolver = "3"
members = ["crates/horizon-core", "crates/horizon-ui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GPU-accelerated terminal board — a visual workspace for managing multiple terminal sessions"
repository = "https://github.com/peters/horizon"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"

[workspace.dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
profiling = "1.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
alacritty_terminal = "0.25.1"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = "0.33.3"
tempfile = "3.20.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
git2 = { version = "0.20", default-features = false }
wgpu = { version = "27.0.1", default-features = false, features = ["std", "vulkan", "gles", "metal", "dx12"] }

[profile.release]
lto = true
strip = true

[profile.profiling]
inherits = "release"
debug = 1
strip = false
