[package]
name = "horizon-cursor"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform cursor position query for Horizon"
repository.workspace = true

[lints]
workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
x11rb = { version = "0.13", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
