[package]
name = "horizon-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
trace-profiling = ["horizon-core/trace-profiling", "profiling/profile-with-tracing"]

[[bin]]
name = "horizon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
horizon-core = { path = "../horizon-core", version = "0.1.0" }
eframe.workspace = true
egui.workspace = true
# Ensure native renderer backends are enabled for eframe's wgpu stack.
wgpu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
profiling.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
alacritty_terminal.workspace = true
comrak = { version = "0.51", default-features = false }
