[package]
name = "horizon-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
trace-profiling = ["horizon-core/trace-profiling", "profiling/profile-with-tracing"]

[[bin]]
name = "horizon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
horizon-core.workspace = true
eframe.workspace = true
egui.workspace = true
winit.workspace = true
# Pulls the backend feature set into eframe's transitive wgpu dependency.
wgpu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
profiling.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
alacritty_terminal.workspace = true
egui_commonmark.workspace = true
