[package]
name = "horizon-ui"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
trace-profiling = ["horizon-core/trace-profiling", "profiling/profile-with-tracing"]
# Opt-in speech input (mic button + push-to-talk hotkey). CPU-only inference
# by default; add one of the GPU variants below to compile a GPU backend in.
# Backend selection at runtime stays automatic with CPU fallback either way.
speech = ["dep:transcribe-cpp", "dep:cpal"]
speech-cuda = ["speech", "transcribe-cpp/cuda"]
speech-vulkan = ["speech", "transcribe-cpp/vulkan"]

[[bin]]
name = "horizon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
horizon-core.workspace = true
horizon-cursor.workspace = true
eframe.workspace = true
egui.workspace = true
winit.workspace = true
# Pulls the backend feature set into eframe's transitive wgpu dependency.
wgpu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
profiling.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
alacritty_terminal.workspace = true
egui_commonmark.workspace = true
arboard.workspace = true
tokio.workspace = true
surge-core.workspace = true
transcribe-cpp = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
