[package]
name = "orbiterm-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orbiterm"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
orbiterm-core = { path = "../orbiterm-core" }
eframe.workspace = true
egui.workspace = true
# Ensure native renderer backends are enabled for eframe's wgpu stack.
wgpu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml.workspace = true
vt100.workspace = true
