[package]
name = "tg-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "termgalore"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tg-core = { path = "../tg-core" }
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_yaml.workspace = true
vt100.workspace = true
